[package]
name = "blinc_media"
description = "Cross-platform audio/video for Blinc — royalty-free codecs only"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/blinc_media"
rust-version.workspace = true

[dependencies]
blinc_core = { path = "../blinc_core", version = "0.5.1" }
blinc_platform = { path = "../blinc_platform", version = "0.5.1" }
blinc_animation = { path = "../blinc_animation", version = "0.5.1" }
tracing.workspace = true

# Audio playback + capture (desktop) — Vorbis, WAV, FLAC.
#
# Pinned to rodio 0.22 because:
#   - Its decoders route through `symphonia` (`vorbis` →
#     `symphonia/vorbis`, `wav` → `symphonia/wav`, `flac` →
#     `symphonia/flac`), so any other consumer in the workspace that
#     pulls symphonia for its own reasons converges on a single set.
#   - The `recording` feature pulls `cpal` directly, and rodio
#     re-exports it as `rodio::cpal` — `rtc.rs`'s audio capture path
#     uses that re-export instead of a standalone `cpal` dep, so the
#     workspace winds up with a single cpal version (was duplicated
#     between rodio 0.19's cpal 0.15 and the standalone cpal 0.17 we
#     pinned for rtc.rs).
[target.'cfg(not(any(target_os = "android", target_os = "ios", target_arch = "wasm32")))'.dependencies]
rodio = { version = "0.22", default-features = false, features = ["playback", "recording", "vorbis", "wav", "flac"] }

# Video decode (desktop) — OpenH264 (royalty-free, Cisco covers patents)
[target.'cfg(not(any(target_os = "android", target_os = "ios", target_arch = "wasm32")))'.dependencies.openh264]
version = "0.9"

# MP4 demuxer (desktop) — extract H.264 NAL units from container
[target.'cfg(not(any(target_os = "android", target_os = "ios", target_arch = "wasm32")))'.dependencies.mp4]
version = "0.14"

# Browser video playback (wasm)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlElement",
    "HtmlVideoElement", "HtmlCanvasElement",
    "CanvasRenderingContext2d", "ImageData",
    "Blob", "BlobPropertyBag", "Url",
    "MediaError", "CssStyleDeclaration", "HtmlMediaElement",
    "TimeRanges",
] }
