[package]
name = "blinc_noto_emoji"
description = "Drop-in NotoColorEmoji fallback for blinc_text. Add to your Cargo.toml and the bundled subset auto-registers at binary init via a `#[ctor]` function — no source changes required. Part of the `blinc_<font>_emoji` add-on family (Twemoji, Fluent Emoji, etc. can publish their own crates with the same auto-register shape)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# The bundled NotoColorEmoji subset is SIL OFL 1.1 licensed. The
# license text lives at `assets/NotoColorEmoji-OFL.txt`; anyone
# redistributing this crate (or a binary that depends on it) should
# keep that file alongside the distribution to honour the attribution
# requirement of OFL 1.1.
include = ["src/**", "assets/**", "README.md"]

[dependencies]
# Target crate — the whole point of this plugin is to register a
# font face with blinc_text's global registry.
blinc_text = { path = "../blinc_text", version = "0.5.1" }

# Pulled in so we can log a one-line debug message when the
# subset is registered. Version-matched to what blinc_text uses.
tracing = { workspace = true }
