[package]
name = "blinc_noto_symbols"
description = "Drop-in Noto Sans text/symbol fallback for blinc_text. Bundles a subset of Noto Sans Regular that covers math operators, arrows, currency symbols, Latin-1 supplement punctuation, and miscellaneous technical glyphs — the non-emoji special characters that `blinc_noto_emoji` doesn't carry. Sibling of `blinc_noto_emoji` in the `blinc_<font>_*` add-on family."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# The bundled NotoSans subset is SIL OFL 1.1 licensed. The
# license text lives at `assets/NotoSans-OFL.txt`; anyone
# redistributing this crate (or a binary that depends on it) should
# keep that file alongside the distribution to honour the attribution
# requirement of OFL 1.1.
include = ["src/**", "assets/**", "README.md"]

[dependencies]
# Target crate — the whole point of this plugin is to register a
# font face with blinc_text's global registry.
blinc_text = { path = "../blinc_text", version = "0.5.0" }

# Pulled in so we can log a one-line debug message when the
# subset is registered. Version-matched to what blinc_text uses.
tracing = { workspace = true }
