[package]
name = "blinc_router"
description = "Cross-platform routing with deep linking for Blinc UI framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/blinc_router"
rust-version.workspace = true

[dependencies]
blinc_core = { path = "../blinc_core", version = "0.1.14" }
blinc_animation = { path = "../blinc_animation", version = "0.1.14" }
blinc_layout = { path = "../blinc_layout", version = "0.1.14" }
blinc_platform = { path = "../blinc_platform", version = "0.1.14" }
tracing.workspace = true
rustc-hash.workspace = true
