[package]
name = "blinc_svg"
description = "SVG loading and rendering for Blinc UI framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/blinc_svg"
rust-version.workspace = true
keywords = ["ui", "gui", "svg", "blinc"]
categories = ["gui", "graphics"]

[features]
default = []
# Opt-in support for embedded raster images inside SVGs (data: URIs
# with image/gif, image/webp, image/jpeg). Enables resvg's
# `raster-images` feature, which pulls `gif` + `image-webp` + `zune-jpeg`.
# Off by default — the bundled icon sets (Lucide, Tabler, Material) are
# pure vector, so most apps never need raster decoding.
svg_raster_images = ["resvg/raster-images"]

[dependencies]
blinc_core = { path = "../blinc_core", version = "0.5.1" }
usvg = "0.44"
# `default-features = false` drops the `raster-images` feature group
# (gif + image-webp + zune-jpeg). Re-enable with this crate's
# `svg_raster_images` feature if you embed raster bitmaps in SVGs.
# The vector + text path stays — `text` / `system-fonts` /
# `memmap-fonts` are kept on so SVG text rendering still works.
resvg = { version = "0.44", default-features = false, features = ["text", "system-fonts", "memmap-fonts"] }
tiny-skia = "0.11"
thiserror = "2.0"
