[package]
name = "blinc_app_examples"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Example apps for the Blinc framework — not published to crates.io"
publish = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("fuchsia", "ohos"))', 'cfg(target_env, values("ohos"))'] }

# Demo-specific features. Heavy subsystems are opt-in so a developer
# iterating on `hello_blinc` (or any of the ~40 lightweight demos)
# doesn't compile the canvas-kit / glTF / media / cn / icon-set
# chains. Enable per-demo via `cargo run --example NAME --features F`;
# `required-features` on the [[example]] entries below makes Cargo
# emit a clear error when the flag is missing instead of a silent
# unresolved-import build failure.
[features]
default = []

# Canvas + GPU primitives (canvas_kit_demo, mesh_3d_demo, and the
# 3D-pipeline base used by every glTF demo).
canvas = ["dep:blinc_canvas_kit"]

# Audio + video playback. Enables the `media` widgets in
# `blinc_layout` (which themselves pull `blinc_media`).
media = ["dep:blinc_media", "blinc_layout/media"]

# `blinc_cn` component library (cn_demo).
cn = ["dep:blinc_cn"]

# `blinc_node_editor` — metadata-driven node-graph editor toolkit
# (node_editor_demo). Implies `canvas` since the editor renders into
# a `blinc_canvas_kit::CanvasKit` surface.
node-editor = ["canvas", "dep:blinc_node_editor", "dep:blinc_portal_ui"]

# Tabler icon set (tabler_icons_demo).
tabler-icons = ["dep:blinc_tabler_icons"]

# Lucide icon set (music_player).
icons = ["dep:blinc_icons"]

# glTF model loading + skeletal animation. Implies `canvas` because
# every glTF demo renders through canvas_kit's 3D pipeline.
gltf = ["canvas", "dep:blinc_gltf", "dep:blinc_skeleton"]

# Experimental hot-reload — forwards to `blinc_app/hot-reload`.
# Run examples under `dx serve --hotpatch` (see
# `docs/book/src/advanced/hot-reload.md`).
hot-reload = ["blinc_app/hot-reload"]

# EXPERIMENTAL — hand-rolled Wayland frame-callback gate. Linux-only.
# Forwards to `blinc_app/wayland-frame-gate`. See the module docs in
# `crates/blinc_app/src/wayland_frame_gate.rs`.
wayland-frame-gate = ["blinc_app/wayland-frame-gate"]

[dependencies]
# Always-on — every demo touches at least these.
blinc_app = { path = "../../crates/blinc_app", features = ["windowed"] }
blinc_core = { path = "../../crates/blinc_core" }
blinc_layout = { path = "../../crates/blinc_layout" }
blinc_theme = { path = "../../crates/blinc_theme" }
blinc_gpu = { path = "../../crates/blinc_gpu" }
blinc_svg = { path = "../../crates/blinc_svg" }
blinc_text = { path = "../../crates/blinc_text" }
blinc_animation = { path = "../../crates/blinc_animation" }
blinc_paint = { path = "../../crates/blinc_paint" }
blinc_router = { path = "../../crates/blinc_router" }
blinc_image = { path = "../../crates/blinc_image", features = ["webp"] }
blinc_platform = { path = "../../crates/blinc_platform" }
blinc_platform_desktop = { path = "../../extensions/blinc_platform_desktop" }

# Optional — gated behind feature flags above. Heavy enough that
# pulling them by default made `cargo run --example hello_blinc` slow
# even though hello_blinc doesn't use any of them.
blinc_cn = { path = "../../crates/blinc_cn", optional = true }
blinc_tabler_icons = { path = "../../crates/blinc_tabler_icons", optional = true }
blinc_icons = { path = "../../crates/blinc_icons", optional = true }
blinc_media = { path = "../../crates/blinc_media", optional = true }

# Downstream packages — each lives in its own upstream repo under the
# `project-blinc` org, colocated locally under the gitignored `/packages/`
# directory during development. The Blinc workspace `[patch]` block
# redirects each git URL to `packages/<name>/` for local iteration; CI
# uses the real git revs.
#
# `blinc_canvas_kit` joined this set after issue #28 — when it lived
# in `crates/`, every workspace resolution pulled its
# (then-separate) `blinc_input` dep, which forced the patch table
# to validate `packages/blinc_input/Cargo.toml` and broke fresh
# checkouts that didn't have `/packages/`. Moving canvas_kit out of
# the workspace means the whole 3D / glTF stack is opt-in via the
# `canvas` and `gltf` features below; default builds don't touch
# any of these git URLs. `blinc_input` was later absorbed into
# `canvas_kit` directly so the standalone crate no longer exists.
# All three are git-pinned to their upstream revs; the workspace
# `[patch]` block redirects each URL to the colocated
# `packages/<name>/` checkout when one exists (local dev) and is
# silently skipped on fresh clones (CI / downstream consumers).
# That lets cargo unify both `[dependencies]` slots and any
# transitive resolution onto the SAME local source whenever the
# packages dir is present, while a fresh clone still resolves the
# git rev normally. Path-deps here would fail in CI: cargo
# validates path-dep manifests at resolve time even when the dep
# is optional + gated, and the gitignored `/packages/` directory
# isn't present.
blinc_canvas_kit = { git = "https://github.com/project-blinc/blinc_canvas_kit.git", rev = "da0d0540b82a0dc940351abf957a0499f4e9da11", optional = true }
blinc_node_editor = { git = "https://github.com/project-blinc/blinc_node_editor.git", rev = "436c8aa38cd91969072521336e1d825df71735bd", optional = true }
blinc_portal_ui = { git = "https://github.com/project-blinc/blinc_portal_ui.git", rev = "4af54e1b2388b460dc776a30b7497342e325ccf5", optional = true }
blinc_gltf = { git = "https://github.com/project-blinc/blinc_gltf.git", rev = "1c1e7105bec95faa4e9f13cb25d2548113149b14", features = ["platform-assets", "bc-encode"], optional = true }
blinc_skeleton = { git = "https://github.com/project-blinc/blinc_skeleton.git", rev = "4cd786055f0b4649b23b96934778c2fad8ac8d65", optional = true }

image.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# Direct wgpu + bytemuck for the gpu_pass_demo example. Other demos
# go through DrawContext / blinc_canvas_kit and never name these
# crates directly.
wgpu.workspace = true
bytemuck.workspace = true
# Cross-target monotonic clock. `std::time::Instant` panics on
# `wasm32-unknown-unknown`; `web_time::Instant` is the same API
# backed by `performance.now()` on web, `Instant::now()` elsewhere.
# Used by `gltf_animation_demo` to advance playback time on the
# main thread in sync with the render closure (not the scheduler
# bg thread, whose cadence doesn't line up with vsync).
web-time = "1.1"

# Wasm-only deps used by the `gltf_animation_demo` for its
# `sleep_ms`-based background loader loop. The demo spawns
# `wasm_bindgen_futures::spawn_local` which polls
# `SceneState::try_load` until the `WebAssetLoader` cache is
# populated; between retries it needs a `setTimeout`-backed
# `JsFuture` to yield back to the browser. Gated behind the wasm
# cfg so desktop builds don't pull any of these in.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window"] }

# ============================================================================
# Per-example feature gates. Demos that import a feature-gated crate
# declare `required-features` so `cargo run --example NAME` fails fast
# with a clear "needs feature X" error instead of an unresolved import.
# Lightweight demos (no entry below) compile against the default deps.
# ============================================================================

[[example]]
name = "canvas_kit_demo"
required-features = ["canvas"]

[[example]]
name = "mesh_3d_demo"
required-features = ["canvas"]

[[example]]
name = "cutegirl_morph_demo"
required-features = ["gltf"]

[[example]]
name = "gltf_animation_demo"
required-features = ["gltf"]

[[example]]
name = "strangler_demo"
required-features = ["gltf"]

[[example]]
name = "texture_transform_demo"
required-features = ["gltf"]

[[example]]
name = "video_demo"
required-features = ["media"]

[[example]]
name = "cn_demo"
required-features = ["cn"]

[[example]]
name = "spinner_test"
required-features = ["cn"]

[[example]]
name = "stateful_demo"
required-features = ["cn"]

[[example]]
name = "router_navigation"
required-features = ["cn"]

[[example]]
name = "tabler_icons_demo"
required-features = ["tabler-icons"]

[[example]]
name = "music_player"
required-features = ["icons"]

[[example]]
name = "node_editor_demo"
required-features = ["node-editor", "tabler-icons", "cn"]
