[package]
name = "blinc_web_hello"
description = "Smallest possible Blinc web app — Hello, WebGPU! in a centered Div"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
# `cdylib` is what wasm-pack needs to emit a `.wasm` artifact + JS shim.
crate-type = ["cdylib", "rlib"]

# Strictly a wasm32 example. Native builds of this crate are
# meaningless — there's no entry point that does anything outside the
# browser. The target gate keeps `cargo build --workspace` from trying
# to link an empty cdylib on macOS / Linux.
[target.'cfg(target_arch = "wasm32")'.dependencies]
blinc_app = { path = "../../crates/blinc_app", default-features = false, features = ["web"] }
blinc_layout = { path = "../../crates/blinc_layout" }
blinc_core = { path = "../../crates/blinc_core" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
tracing = { workspace = true }
